avoid access to book when it's empty